<resources>
    <string name="app_name">Anki-blank</string>
    <string name="General_setting">General setting</string>
    <string name="Totally_mixed">Totally mixed</string>
    <string name="New_blanks_first">Old blanks after news</string>
    <string name="Learning_priority">New blank position</string>
    <string name="Old_blanks_first">New blanks after olds</string>
    <string name="Enable_Notification">Enable learning notification ON/OFF</string>
    <string name="Learn_ahead">Learn ahead limit (in minutes)</string>
    <string name="Minimum_interval">Minimum unit of learning interval</string>
    <string name="interval_min">Minute</string>
    <string name="interval_hour">Hour</string>
    <string name="interval_day">Day</string>
    <string name="Choose_color_blank">Choose color of blank</string>
    <string name="Pick_color">Pick color</string>
    <string name="Show_border">Show border of blank</string>
    <string name="color_of_picked_blank">Choose color of picked blank</string>
    <string name="read_read">Show\nblanks</string>
    <string name="read_noblank">Hide\nblanks</string>
    <string name="read_create_blank">Create\nblank</string>
    <string name="read_delete_blank">Delete\nblank</string>
    <string name="show_answer">Show answer</string>
    <string name="again">Again</string>
    <string name="hard">Hard</string>
    <string name="good">Good</string>
    <string name="easy">Easy</string>
    <string name="close_study_page">Close this page</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="get_pdf">Import PDF</string>
    <string name="Study_under_folder">Study all files under this folder</string>
    <string name="Pick_customized_schedule">Customized learning schedule</string>
    <string name="Delete_this_folder">Delete this folder</string>
    <string name="Clear_unusing_learning_data">Clear learning data for not existing PDF</string>
    <string name="New_card">New card</string>
    <string name="When_press_again">When press -Again- (in minutes)</string>
    <string name="When_press_good">When press -Good- (in minutes)</string>
    <string name="graduating_interval_in_days">Graduating interval (in days)</string>
    <string name="Easy_interval_in_days">When choose -Easy- (in days)</string>
    <string name="Starting_ease">Starting ease (%)</string>
    <string name="Graduated">Graduated</string>
    <string name="Easy_bonus">Interval bonus when -Easy- (%)</string>
    <string name="Interval_modifier">Interval modifier (%)</string>
    <string name="Maximun_interval">Maximum interval (in days)</string>
    <string name="Relearning">Relearning</string>
    <string name="New_interval">New interval(%)</string>
    <string name="Delete">Delete</string>
    <string name="Select">Select</string>
    <string name="Edit_option">Edit option</string>
    <string name="Read_edit">Read / Edit</string>
    <string name="Start_study">Start study</string>
    <string name="Add_new_customized_schedule">Customized learning schedule</string>
    <string name="Learning_schedule_list">Learning schedule list</string>
    <string name="notification_title">It\'s time to study</string>
    <string name="name_is_already_exists">This name is already exists</string>
    <string name="least_namelength">Name\'s length shoud be longer than zero</string>
    <string name="pages">" pages"</string>
    <string name="Basicfolder_capacity">Your Basic folder capacity is not enough</string>
    <string name="folder_name_required">Please input folder name</string>
    <string name="folder_name_already_exists">The folder name already exists</string>
    <string name="Delete_confirm">Delete confirm</string>
    <string name="Delete_confirm_content">Are you certain to want to delete this file and learning data?</string>
    <string name="Keep_show_box">Keeping show this box after create new folder</string>
    <string name="New_folder_make">Put in your new folder\'s name</string>
    <string name="Folder_delete_content">Are you sure to want to delete this folder and learning data under this folder?</string>
    <string name="A_folder_create">Create</string>
    <string name="Cancel">Cancel</string>
    <string name="Data_cleaning_title">Clear learning data about not existing files</string>
    <string name="Clear">Clear</string>
    <string name="After">after</string>
    <string name="Minutes">minutes</string>
    <string name="Hours">hours</string>
    <string name="Days">days</string>
    <string name="A_minute">minute</string>
    <string name="A_hour">hour</string>
    <string name="A_day">day</string>
    <string name="after_relearning_interval">New interval after regraduate (%)</string>
    <string name="DB_backup">Learning data backup</string>
    <string name="OK">OK</string>
    <string name="DB_backup_path">Database wil saved at /Android/data/com.example.test21/files/DB_Storage</string>
    <string name="notification_content">Start learning page directly</string>
    <string name="file_already_exists">The chosen file already exists</string>
    <string name="first_notification">Before starting this app</string>
    <string name="first_notification_content">When you delete this app, all files in this app that you imported and learning data will be deleted together.\nPlease back up your file.</string>
    <string name="drawer_premium_title">Anki-blank Premium</string>
    <string name="premium_ad">- Remove ads</string>
    <string name="premium_folder_available">- Can use page-unlimited folder</string>
    <string name="upgrade_to_premium">Upgrade to premium version</string>
    <string name="subscribe_now">Suscribe now</string>
    <string name="no_thanks">No, thanks</string>
    <string name="purchage_status_explain">Status :</string>
    <string name="Free">Free</string>
    <string name="having_premium">Premium</string>
    <string name="subs_update_not_supported">Subscription update is not supported</string>
    <string name="putin_new_option_name">Put in your new option name</string>
    <string name="App_update_snackbar">New app is ready</string>
    <string name="update_install">Install</string>
    <string name="update_download_started">Download started</string>
    <string name="onlyoneshow">Show only a studying blank</string>
</resources>