<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layoutborder">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/option_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.2"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="20dp" />

        <Button
            android:id="@+id/option_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Delete"
            android:textSize="12dp" />

    </LinearLayout>

    <Button
        android:id="@+id/option_select"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Select"
        android:textSize="12dp" />

    <Button
        android:id="@+id/edit_option"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Edit_option"
        android:textSize="12dp" />

</LinearLayout>