<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#3C9BDF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border_white"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/upgrade_to_premium"
        android:textColor="#FFFFFF"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/launcher_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="10dp"
                android:text="@string/premium_ad"
                android:textColor="#FFFFFF"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="10dp"
                android:text="@string/premium_folder_available"
                android:textColor="#FFFFFF"
                android:textSize="15dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/no_thanks"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/white_rectangle_border_empty"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/no_thanks"
            android:textColor="#3C9BE9"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/subscribe_now"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/white_rectangle_border"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/subscribe_now"
            android:textColor="#3C9BE9"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>