<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#F5F8FA"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#379BDF"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/launcher_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3C9BDF"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_general_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            app:srcCompat="@drawable/ic_baseline_settings_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="start|center_vertical"
            android:paddingStart="8dp"
            android:text="@string/General_setting"
            android:textColor="#000000"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_learning_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            app:srcCompat="@drawable/schedule" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="start|center_vertical"
            android:paddingStart="8dp"
            android:text="@string/Pick_customized_schedule"
            android:textColor="#000000"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_data_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            app:srcCompat="@drawable/ic_baseline_cleaning_services_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center|start|center_vertical"
            android:paddingStart="8dp"
            android:text="@string/Clear_unusing_learning_data"
            android:textColor="#000000"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_premium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#FF9800"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/drawer_premium_title"
            android:textColor="#FFFFFF"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:paddingStart="10dp"
            android:text="@string/premium_ad"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:paddingStart="10dp"
            android:text="@string/premium_folder_available"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />

        <LinearLayout
            android:id="@+id/Sub_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/purchage_check_mark"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                app:srcCompat="@drawable/empty_premium" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:paddingStart="10dp"
                android:text="@string/purchage_status_explain"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/purchage_status_textbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:paddingStart="10dp"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>