<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/folder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layoutborder"
        android:paddingHorizontal="15dp"
        android:textColor="#4254BC"
        android:textSize="40dp" />

    <LinearLayout
        android:id="@+id/new_folder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/new_folder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:text="@string/create_new_folder"
            android:textColor="#000000"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/get_pdf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/get_pdf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:text="@string/get_pdf"
            android:textColor="#000000"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/multi_study"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/study" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:text="@string/Study_under_folder"
            android:textColor="#000000"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pick_option"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/schedule" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:text="@string/Pick_customized_schedule"
            android:textColor="#000000"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/folder_delete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:text="@string/Delete_this_folder"
            android:textColor="#000000"
            android:textSize="25dp" />

    </LinearLayout>

</LinearLayout>