<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pdf_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layoutborder"
        android:paddingHorizontal="15dp"
        android:textColor="#4254BC"
        android:textSize="40dp" />

    <LinearLayout
        android:id="@+id/re"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/edit" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:text="@string/Read_edit"
            android:textColor="#000000"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/study"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/study" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:text="@string/Start_study"
            android:textColor="#000000"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pdf_option"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/schedule" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:text="@string/Pick_customized_schedule"
            android:textColor="#000000"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pdf_delete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:text="@string/Delete"
            android:textColor="#000000"
            android:textSize="25dp" />
    </LinearLayout>

</LinearLayout>